# langchain

langchain-1/: main.py  pyproject.toml  requirements.txt
langchain-1/updatedlangchain/: 01-chatprompttemplate.py  02-chatprompttemplate_with_history_streamlit.py  1-langchainintro.ipynb
langchain-1/updatedlangchain/chat_history/: chatprompttemplate_with_history.py  chatprompttemplate_with_history_streamlit.py
langchain-1/updatedlangchain/embeddings/: embeddings_ollama.py  jobsearch_helper.py
